Commit al blogpost mas reciente en MASTER

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,15 @@
     <title>Blog post</title>
 </head>
 <body>
-    <h1>Titulo del blog</h1>
-    <p>Primer parrafo</p>
+    <div id="container">
+        <div id="post">
+            <h1>Titulo</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam scelerisque pretium tincidunt. Donec semper nunc a nisl pharetra, id dignissim dolor maximus. Nullam nec vestibulum tortor. Praesent convallis euismod ex, vel gravida sapien tincidunt ac. Aenean consectetur massa a tincidunt luctus. Proin interdum ac lacus eu consectetur. Cras pharetra orci ac est semper tempor.</p>
+            <p>Aenean quis urna ut diam vestibulum tincidunt blandit et justo. Proin felis nisl, pretium sit amet nunc laoreet, scelerisque sollicitudin dolor. Donec ac nunc rutrum, pellentesque diam eget, viverra nunc. Duis scelerisque ultricies massa a convallis. Vivamus eleifend augue a odio maximus, et ultricies quam mattis. Cras et rutrum augue. Curabitur eget aliquam justo. Cras vel varius urna. Integer tristique massa a pretium commodo. Sed aliquet velit a ligula feugiat, eget hendrerit mi euismod.</p>
+            <p>Ut quis pellentesque mauris. Aenean fermentum lacinia magna finibus rutrum. Pellentesque vel placerat nisi, consectetur sodales nisi. Proin eu viverra libero, ac sagittis leo. Nunc ac tristique mi. Proin sagittis nunc odio, ac bibendum massa cursus nec. Duis nec nisl at lacus venenatis semper. Curabitur porta luctus nibh eget consectetur. Nulla interdum eros ut turpis placerat vulputate. Aliquam efficitur, ante nec consectetur dignissim, lectus tellus dictum ante, eleifend rhoncus ex enim sit amet lectus. Morbi sit amet sem pharetra, ultricies orci ac, iaculis lacus. Suspendisse potenti. Maecenas ut lacus a magna interdum rhoncus. Ut eget sem ultrices, aliquam sapien quis, accumsan libero. Aenean sagittis ac tellus sit amet convallis.</p>
+            <p>Quisque eu nunc diam. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet auctor viverra. Ut bibendum, elit id luctus gravida, eros lorem suscipit augue, id faucibus dui est sed turpis. Donec tincidunt commodo suscipit. Etiam eu lectus mi. Etiam vehicula vulputate ultricies. Cras fringilla consectetur bibendum. Curabitur scelerisque condimentum leo id pretium. Nunc semper, tellus sed consectetur tempus, mi augue vulputate dui, molestie rutrum justo risus id ligula. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse dignissim mattis est, eget fringilla mauris. Pellentesque mollis, diam id hendrerit ullamcorper, ex velit volutpat tortor, quis luctus erat elit eu leo. Vivamus sit amet arcu et velit interdum faucibus.</p>
+            <p>Nulla egestas pellentesque feugiat. Aenean et turpis finibus felis pulvinar molestie. Aliquam neque tellus, bibendum ac ultrices sed, mollis eu elit. Cras in pretium sem. Etiam accumsan, nunc rhoncus sagittis cursus, odio erat venenatis libero, eu varius lorem mauris ut purus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent in ornare ex, et tempus purus. Quisque hendrerit, enim non maximus condimentum, sapien mauris luctus sapien, vel pharetra odio elit non orci. Nulla dignissim ipsum eu tellus venenatis, eget vehicula magna semper. Praesent condimentum pellentesque dui et elementum.</p>
+        </div>
+    </div>
 </body>
 </html>
