--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
+            Cabecera
+        </div>
         <div id="post">
             <h1>Titulo</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam scelerisque pretium tincidunt. Donec semper nunc a nisl pharetra, id dignissim dolor maximus. Nullam nec vestibulum tortor. Praesent convallis euismod ex, vel gravida sapien tincidunt ac. Aenean consectetur massa a tincidunt luctus. Proin interdum ac lacus eu consectetur. Cras pharetra orci ac est semper tempor.</p>
