--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,9 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Cabecera
+            <span id="tagline">Tu blog de confianza</span>
+            <span>|</span>
+            HYPERBLOG
         </div>
         <div id="post">
             <h1>Titulo</h1>
