Agregado contenido y mejor typo

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,9 @@
     <div id="container">
         <div id="post">
             <h1>Titulo</h1>
+            <p>
+                Este es el verdadero inicio del blog, con parrafos decentes y toda la cosa, estoy escribiendo solo por escribir
+            </p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam scelerisque pretium tincidunt. Donec semper nunc a nisl pharetra, id dignissim dolor maximus. Nullam nec vestibulum tortor. Praesent convallis euismod ex, vel gravida sapien tincidunt ac. Aenean consectetur massa a tincidunt luctus. Proin interdum ac lacus eu consectetur. Cras pharetra orci ac est semper tempor.</p>
             <p>Aenean quis urna ut diam vestibulum tincidunt blandit et justo. Proin felis nisl, pretium sit amet nunc laoreet, scelerisque sollicitudin dolor. Donec ac nunc rutrum, pellentesque diam eget, viverra nunc. Duis scelerisque ultricies massa a convallis. Vivamus eleifend augue a odio maximus, et ultricies quam mattis. Cras et rutrum augue. Curabitur eget aliquam justo. Cras vel varius urna. Integer tristique massa a pretium commodo. Sed aliquet velit a ligula feugiat, eget hendrerit mi euismod.</p>
             <p>Ut quis pellentesque mauris. Aenean fermentum lacinia magna finibus rutrum. Pellentesque vel placerat nisi, consectetur sodales nisi. Proin eu viverra libero, ac sagittis leo. Nunc ac tristique mi. Proin sagittis nunc odio, ac bibendum massa cursus nec. Duis nec nisl at lacus venenatis semper. Curabitur porta luctus nibh eget consectetur. Nulla interdum eros ut turpis placerat vulputate. Aliquam efficitur, ante nec consectetur dignissim, lectus tellus dictum ante, eleifend rhoncus ex enim sit amet lectus. Morbi sit amet sem pharetra, ultricies orci ac, iaculis lacus. Suspendisse potenti. Maecenas ut lacus a magna interdum rhoncus. Ut eget sem ultrices, aliquam sapien quis, accumsan libero. Aenean sagittis ac tellus sit amet convallis.</p>
