--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            <span id="tagline">Tu blog de confianza</span>
+            <span id="tagline">Tu blog de cabecera</span>
             <span>|</span>
             HYPERBLOG
         </div>
