--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            <span id="tagline">Tu blog de confianza</span>
+            <span id="tagline">Tu blog maestro</span>
             <span>|</span>
             HYPERBLOG
         </div>
@@ -18,6 +18,9 @@
             <h1>Titulo</h1>
             <p>
                 Este es el verdadero inicio del blog, con parrafos decentes y toda la cosa, estoy escribiendo solo por escribir
+            </p>
+            <p>
+                Suscribete y dale like
             </p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam scelerisque pretium tincidunt. Donec semper nunc a nisl pharetra, id dignissim dolor maximus. Nullam nec vestibulum tortor. Praesent convallis euismod ex, vel gravida sapien tincidunt ac. Aenean consectetur massa a tincidunt luctus. Proin interdum ac lacus eu consectetur. Cras pharetra orci ac est semper tempor.</p>
             <p>Aenean quis urna ut diam vestibulum tincidunt blandit et justo. Proin felis nisl, pretium sit amet nunc laoreet, scelerisque sollicitudin dolor. Donec ac nunc rutrum, pellentesque diam eget, viverra nunc. Duis scelerisque ultricies massa a convallis. Vivamus eleifend augue a odio maximus, et ultricies quam mattis. Cras et rutrum augue. Curabitur eget aliquam justo. Cras vel varius urna. Integer tristique massa a pretium commodo. Sed aliquet velit a ligula feugiat, eget hendrerit mi euismod.</p>
