Cambio de titulo del blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
         <div id="cabecera">
             <span id="tagline">Tu blog maestro</span>
             <span>|</span>
-            HYPERBLOG
+            SUPERBLOG
         </div>
         <div id="post">
             <h1>Titulo</h1>
