Cambio de blog a ingles
En inglés...

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            <span id="tagline">Tu blog maestro</span>
+            <span id="tagline">Just another blog...</span>
             <span>|</span>
             SUPERBLOG
         </div>
