--- a/blogpost.html
+++ b/blogpost.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Testing blog</title>
+    <title>Hyper Blog</title>
 </head>
 <body>
     <div id="container">
         <div id="cabecera">
             <span id="tagline">Just another blog...</span>
             <span>|</span>
-            SUPERBLOG
+            HYPERBLOG
         </div>
         <div id="post">
             <h1>Titulo</h1>
