--- a/blogpost.html
+++ b/blogpost.html
@@ -19,10 +19,12 @@
             <p>
                 Este es el verdadero inicio del blog, con parrafos decentes y toda la cosa, estoy escribiendo solo por escribir
             </p>
-            <p>
-                Suscribete y dale like
-            </p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam scelerisque pretium tincidunt. Donec semper nunc a nisl pharetra, id dignissim dolor maximus. Nullam nec vestibulum tortor. Praesent convallis euismod ex, vel gravida sapien tincidunt ac. Aenean consectetur massa a tincidunt luctus. Proin interdum ac lacus eu consectetur. Cras pharetra orci ac est semper tempor.</p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam scelerisque pretium tincidunt. Donec semper nunc a nisl pharetra, id dignissim dolor maximus. Nullam nec vestibulum tortor. Praesent convallis euismod ex, vel gravida sapien tincidunt ac. Aenean consectetur massa a tincidunt luctus. Proin interdum ac lacus eu consectetur. Cras pharetra orci ac est semper tempor.
+        </p>
+        <p>
+            Suscribete y dale like
+        </p>
         </div>
     </div>
 </body>
