color de fondo mejor color

--- a/blogpost.html
+++ b/blogpost.html
@@ -13,6 +13,7 @@
             <span id="tagline">Just another blog...</span>
             <span>|</span>
             HYPERBLOG
+            <img id="logo" src="images/dragonlogo.png" />
         </div>
         <div id="post">
             <h1>Titulo</h1>
