cambios al footer ok

--- a/blogpost.html
+++ b/blogpost.html
@@ -28,7 +28,7 @@
         </div>
     </div>
     <div id="footer">
-        Este es el footer
+        Este es el footer 👀
     </div>
 </body>
 </html>
