--- a/blogpost.html
+++ b/blogpost.html
@@ -20,6 +20,9 @@
             <p>
                 Este es el verdadero inicio del blog, con parrafos decentes y toda la cosa, estoy escribiendo solo por escribir
             </p>
+            <p>
+                <img src="https://i.postimg.cc/9MHdm5Vk/drgnn.png" width="100%" />
+            </p>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam scelerisque pretium tincidunt. Donec semper nunc a nisl pharetra, id dignissim dolor maximus. Nullam nec vestibulum tortor. Praesent convallis euismod ex, vel gravida sapien tincidunt ac. Aenean consectetur massa a tincidunt luctus. Proin interdum ac lacus eu consectetur. Cras pharetra orci ac est semper tempor.
         </p>
